--- a/src/main/resources/templates/mail/number-of-tasks-available-in-the-database.html
+++ b/src/main/resources/templates/mail/number-of-tasks-available-in-the-database.html
@@ -116,7 +116,7 @@
                                             </tbody>
                                         </table>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Application functionality:
+                                            Available tasks in database:
                                         </p>
                                         <ul th:each="function : ${tasks_list}">
                                             <li th:text="${function}"></li>
